<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowColor"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/rlSignupActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/firstName"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/firstName"
            android:inputType="text"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFirstName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/lastName"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLastName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/lastName"
            android:inputType="text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etLastName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etEmail"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/ivPasswordRules"
                android:contentDescription="@string/passwordRulesDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_alert" />

        </LinearLayout>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/confirmPassword"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cbBelowEighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/belowEighteen"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbBelowEighteen"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btnSubmit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button_rounded"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/btnSubmit"
                android:visibility="gone" />

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>