<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowColor"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:id="@+id/rlMainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@id/etEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/llButtons"
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"
                android:background="@drawable/button_rounded"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSignup"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llButtons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:maxWidth="70dip"
            android:maxHeight="70dip"
            android:minWidth="70dip"
            android:minHeight="70dip"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>